<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".fragments.Welcome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/namasteImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="37dp"
            android:contentDescription="@string/yoga_posture"
            android:src="@drawable/ic_namaste"
            app:layout_constraintBottom_toTopOf="@+id/greetingsMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/namasteImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/greetingsMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings_message"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/logOutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namasteImage" />

        <com.royrodriguez.transitionbutton.TransitionButton
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@xml/roundcorner"
            android:text="@string/log_out"
            android:textColor="@android:color/white"
            app:defaultColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingsMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>