<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".fragments.LoginScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signInImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/sign_up"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/start_msg"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/createAccountMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInImage"
            />

        <TextView
            android:id="@+id/createAccountMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_back" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            app:hintTextColor="@xml/text_input_box_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountMessage"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                app:layout_constraintWidth_percent="0.8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_id"
            app:endIconMode="clear_text"
            app:hintTextColor="@xml/text_input_box_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailIdEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textWebEmailAddress|textEmailAddress"
                app:layout_constraintWidth_percent="0.8" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:hintTextColor="@xml/text_input_box_stroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
            app:layout_constraintVertical_bias="0.009"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                app:layout_constraintWidth_percent="0.8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmpasswordInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:hintTextColor="@xml/text_input_box_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmpasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                app:layout_constraintWidth_percent="0.8" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpasswordInputLayout" />

        <com.royrodriguez.transitionbutton.TransitionButton
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:background="@xml/roundcorner"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            app:defaultColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpasswordInputLayout"
            app:layout_constraintVertical_bias="0.136"
            app:layout_constraintWidth_percent=".65"
            app:loaderColor="@android:color/white" />

        <TextView
            android:id="@+id/connectUsing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/connect_using"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"
            app:layout_constraintVertical_bias="0.111" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/googleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="#DB4437"
            app:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectUsing"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_google"
            app:tint="@color/white"
            app:borderWidth="0dp"
            android:contentDescription="@string/google_icon" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/googleSignIn">

            <TextView
                android:id="@+id/alreadyHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginPageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/alreadyHaveAnAccount"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="@string/log_in"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
